--- a/AuthDemoProject/appsettings.json
+++ b/AuthDemoProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=auth-demo-project;password=1234;database=auth-demo-project;"
+    "DefaultConnection": "server=localhost;userid=gamerank;password=gamerank;database=gamerank;"
   },
   "Logging": {
     "LogLevel": {
